--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@
     filter: drop-shadow(0px 4px 4px rgba(193, 193, 193, 0.4));
 }
 
+.tasks__item--completed {
+    color: #d9d9d9;
+}
+
 .item__icon {
     font-size: 1.5rem;
 }
