--- a/style.css
+++ b/style.css
@@ -37,6 +37,21 @@
     font-weight: 400;
 }
 
+.tasks__add-task {
+    display: flex;
+    padding: 1rem 2.5rem;
+    background-color: #f9f9f9;
+    border-radius: 24px;
+    filter: drop-shadow(0px 4px 4px rgba(193, 193, 193, 0.4));
+}
+
+.tasks__add-task a {
+    color: #333;
+    font-size: 1rem;
+    font-weight: 700;
+    text-decoration: none;
+}
+
 .tasks__item {
     display: flex;
     justify-content: space-between;
