--- a/add.css
+++ b/add.css
@@ -4,3 +4,58 @@
     box-sizing: border-box;
     font-family: 'General Sans', sans-serif;
 }
+
+.frame {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    gap: 1.5rem;
+    align-items: center;
+    padding: 1rem 0 5rem 0;
+    background-color: #EEEFF1;
+}
+
+.frame__back {
+    margin: 2rem;
+    padding: 0.5rem 2.5rem;
+    align-self: flex-start;
+    background-color: #f9f9f9;
+    border-radius: 24px;
+    filter: drop-shadow(0px 4px 4px rgba(193, 193, 193, 0.4));
+    font-size: 1rem;
+    font-weight: 600;
+    color: black;
+    text-decoration: none;
+}
+
+#newTask {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: auto;
+    margin: auto;
+}
+
+#taskName {
+    padding: 1.5rem;
+    width: 800px;
+    background-color: #f9f9f9;
+    border-radius: 24px;
+    border: none;
+    filter: drop-shadow(0px 4px 4px rgba(193, 193, 193, 0.4));
+    font-size: 1.5rem;
+}
+
+#submitButton {
+    padding: 1rem 2.5rem;
+    width: 200px;
+    background-color: #f9f9f9;
+    border-radius: 24px;
+    border: none;
+    filter: drop-shadow(0px 4px 4px rgba(193, 193, 193, 0.4));
+    font-size: 1rem;
+    font-weight: 700;
+    color: black;
+    text-decoration: none;
+}
